# sort_text_international_rust_wasm_pwa

./: .auto_version_from_date.json  .gitignore  Cargo.toml  LICENSE  README.md  cache64.txt  temp64.txt
.github/workflows/: rust.yml
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/sort_text_international_rust_wasm_pwa/: all.html  constant.__wasm_bindgen_generated_wasm_bindgen_start__const.html  fn.wasm_bindgen_start.html  index.html  sidebar-items.js
docs/sort_text_international_rust_wasm_pwa/dom_mod/: fn.inject_htm_into_dom.html  fn.on_click_button_1.html  fn.start_function.html  index.html  sidebar-items.js
docs/sort_text_international_rust_wasm_pwa/sorting_mod/: fn.sort.html  index.html  sidebar-items.js
docs/sort_text_international_rust_wasm_pwa/web_sys_mod/: fn.add_listener_to_button.html  fn.collator_compare.html  fn.create_collator.html  fn.debug_write.html  fn.get_element_by_id.html  fn.get_html_element_by_id.html  fn.get_input_element_value_string_by_id.html  fn.get_text_area_element_value_string_by_id.html  fn.set_inner_html.html  fn.set_text_area_element_value_string_by_id.html  fn.window.html  index.html  sidebar-items.js
docs/src/sort_text_international_rust_wasm_pwa/: dom_mod.rs.html  lib.rs.html  sorting_mod.rs.html  web_sys_mod.rs.html
src/: dom_mod.rs  lib.rs  sorting_mod.rs  web_sys_mod.rs
tmp/: temp63.txt
web_server_folder/sort_text_international_rust_wasm_pwa/: index.html  manifest.json  service_worker.js
(+1 files in other folders)
